--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/cmosgh/express-api-example#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "typedi": "^0.10.0",
+    "typeorm": "^0.2.31",
+    "typeorm-typedi-extensions": "^0.4.1"
   },
   "devDependencies": {
     "prettier": "^2.4.1",
