--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/cmosgh/express-api-example/issues"
   },
   "homepage": "https://github.com/cmosgh/express-api-example#readme",
+  "scripts": {
+    "start": "ts-node-dev --respawn src/index.ts"
+  },
   "dependencies": {
     "express": "^4.17.2",
     "typedi": "^0.10.0",
