--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "express-api-example",
   "version": "1.0.0",
   "description": "Just some express example",
-  "main": "index.ts",
-  "scripts": {
-    "test": "test"
-  },
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cmosgh/express-api-example.git"
@@ -17,10 +14,18 @@
   },
   "homepage": "https://github.com/cmosgh/express-api-example#readme",
   "scripts": {
-    "start": "ts-node-dev --respawn src/index.ts"
+    "start": "ts-node-dev --respawn src/index.ts",
+    "test": "echo 'no tests defined'"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "compression": "^1.7.4",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "env-var": "^7.1.1",
+    "helmet": "^5.0.2",
+    "pg": "^8.5.1",
+    "server-destroy": "^1.0.1",
     "typedi": "^0.10.0",
     "typeorm": "^0.2.31",
     "typeorm-typedi-extensions": "^0.4.1"
@@ -28,6 +33,7 @@
   "devDependencies": {
     "prettier": "^2.4.1",
     "@types/express": "^4.17.11",
+    "@types/compression": "^1.7.2",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
