--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
   "homepage": "https://github.com/cmosgh/express-api-example#readme",
   "scripts": {
     "start": "ts-node-dev --respawn src/index.ts",
-    "test": "echo 'no tests defined'"
+    "test": "echo 'no tests defined'",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
     "env-var": "^7.1.1",
+    "express": "^4.17.2",
     "helmet": "^5.0.2",
+    "node-fetch": "^2.6.7",
     "pg": "^8.5.1",
     "server-destroy": "^1.0.1",
     "typedi": "^0.10.0",
@@ -31,11 +33,13 @@
     "typeorm-typedi-extensions": "^0.4.1"
   },
   "devDependencies": {
-    "prettier": "^2.4.1",
-    "@types/express": "^4.17.11",
     "@types/compression": "^1.7.2",
+    "@types/express": "^4.17.11",
+    "@types/node-fetch": "^3.0.3",
+    "prettier": "^2.4.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
-  }
+  },
+  "type": "module"
 }
