--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dotenv": "^16.0.0",
     "env-var": "^7.1.1",
     "express": "^4.17.2",
+    "iban": "^0.0.14",
     "helmet": "^5.0.2",
     "node-fetch": "^2.6.7",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.5.1",
     "server-destroy": "^1.0.1",
     "typedi": "^0.10.0",
@@ -37,6 +39,7 @@
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.11",
     "@types/node-fetch": "^3.0.3",
+    "@types/iban": "^0.0.32",
     "prettier": "^2.4.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
